css/style.css
/* ... */
.beny_tm_services_wrap_second .beny_tm_main_title_holder {
	margin-bottom: 90px;
}

.beny_tm_service_wrapper_all[data-style="second"] {
	padding-bottom: 22px;
}

.beny_tm_services_wrap_second .service_icon .svg {
	color: #fd4d4d;
}

/*---------------------------------------------------*/
/*	17) HOMEPAGE 7
/*---------------------------------------------------*/

.beny_tm_animation_text_word {
	font-size: 50px;
	font-weight: 600;
	font-family: "Montserrat";
	letter-spacing: -1px;
	color: #fff;
}

.beny_tm_hero_title .animate {
	font-size: 45px;
	font-weight: 400;
	font-family: "Montserrat";
	letter-spacing: -1px;
	color: #fff;
	line-height: 1;
	margin-bottom: 40px;
	padding-top: 20px;
}


.beny_tm_leftpart_wrap {
	width: 322px;
	position: fixed;
	top: 16px;
	bottom: 16px;
	left: 16px;
	background-color: #000;
	z-index: 100;
	border: 1px solid rgba(255, 255, 255, .05);
	border-radius: 18px;
	overflow-y: auto;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;

}

.beny_tm_leftpart_wrap .leftpart_inner {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	box-sizing: border-box;
	padding: 45px 40px;
}

.beny_tm_leftpart_wrap .author_image_wrap {

	width: 150px;
	height: 150px;
	margin-bottom: 30px;
}

.beny_tm_leftpart_wrap .author_image_wrap img {
	border-radius: 100%;
}

.beny_tm_leftpart_wrap .author_name h3 {
	color: #fff;
	font-weight: 700;
	font-family: "Montserrat";
	font-size: 25px;
	margin-bottom: 13px;
}

.beny_tm_leftpart_wrap .author_job h3 {
	font-family: "Montserrat";

	color: #fd4d4d;
	font-size: 15px;
	font-weight: 700;
	text-transform: uppercase;

	margin-top: 30px;
}



















.beny_tm_leftpart_wrap .menu_list_wrap {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	text-align: left;
	margin-top: 30px;
	padding-top: 0px;

	-webkit-box-sizing: border-box;
	/* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;
	/* Firefox, other Gecko */
	box-sizing: border-box;
	/* Opera/IE 8+ */
}

.beny_tm_leftpart_wrap .menu_list_wrap ul {
	margin: 0px;
	list-style-type: none;
}

.beny_tm_leftpart_wrap .menu_list_wrap ul li {
	margin: 0px;
}

.beny_tm_leftpart_wrap .menu_list_wrap ul li:last-child {
	margin-bottom: 0px;
}

.beny_tm_leftpart_wrap .menu_list_wrap ul li a {
	text-decoration: none;
	color: #fff;
	font-family: "Montserrat";
	font-size: 16px;
	font-weight: 500;
	text-transform: capitalize;
	position: relative;
	display: block;
	padding: 11px 0px;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.beny_tm_leftpart_wrap .menu_list_wrap ul li a:hover {
	color: #ea580c;
	padding-left: 12px;
}

.beny_tm_leftpart_wrap .leftpart_bottom {
	width: 100%;
	clear: both;
	float: left;
	text-align: left;
	margin-top: 70px;
	padding-top: 0px;
	box-sizing: border-box;
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap {
	width: 100%;
	height: auto;
	float: left;
	position: relative;
	left: -5px;
	margin-bottom: 0px;

	-webkit-box-sizing: border-box;
	/* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;
	/* Firefox, other Gecko */
	box-sizing: border-box;
	/* Opera/IE 8+ */
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap ul {
	margin: 0px;
	list-style-type: none;
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap ul li {
	margin: 0px 20px 0px 0px;
	display: inline-block;
	font-size: 17px;
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap ul li:last-child {
	margin-right: 0px;
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap ul li a {
	text-decoration: none;
	color: #fff;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.beny_tm_leftpart_wrap .leftpart_bottom .social_wrap ul li a:hover {
	color: #ea580c;
}

.beny_tm_leftpart_wrap .arlo_tm_resize {
	position: absolute;
	right: 0px;
	bottom: 20%;
	width: 30px;
	height: 30px;
	text-align: center;
	line-height: 30px;
	background-color: #E3872D;
	display: inline-block;
	text-decoration: none;
	z-index: 200;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.beny_tm_leftpart_wrap .arlo_tm_resize.opened {
	right: -30px;
}

.beny_tm_leftpart_wrap .arlo_tm_resize i {
	color: #fff;
	transform: rotate(0deg);
	position: absolute;
	left: 6px;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.beny_tm_leftpart_wrap .arlo_tm_resize i.opened {
	transform: rotate(-180deg);
}

.beny_tm_rightpart {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	padding-left: 350px;
	box-sizing: border-box;
}

/*---------------------------------------------------*/
/*	14) INTRO_PAGE
/*---------------------------------------------------*/

.beny_tm_intro_universal_bg_wrap {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	position: relative;

	-webkit-box-sizing: border-box;
	/* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;
	/* Firefox, other Gecko */
	box-sizing: border-box;
	/* Opera/IE 8+ */
}

.beny_tm_intro_universal_bg_wrap .bg_wrap {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 10;
}

.beny_tm_intro_universal_bg_wrap .bg_wrap .overlay_image {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 15;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
}

.beny_tm_intro_universal_bg_wrap .bg_wrap .overlay_color {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 20;
}
/* ... */

